// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIndicator Component should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
>
  <ActivityIndicator
    color="#3D93F8"
  />
</View>
`;

exports[`LoadingIndicator Component should render new color props correctly 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
>
  <ActivityIndicator
    color="#FFFFFF"
    size="large"
  />
</View>
`;

exports[`LoadingIndicator Component should render new small size props correctly 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
>
  <ActivityIndicator
    color="#FFFFFF"
    size="small"
  />
</View>
`;
